[gd_scene load_steps=27 format=3 uid="uid://duf5bnr6sq7bx"]

[ext_resource type="Script" path="res://main.gd" id="1_j81sk"]
[ext_resource type="PackedScene" uid="uid://11w5rcl2p8wf" path="res://circulo.tscn" id="2_lxu00"]
[ext_resource type="PackedScene" uid="uid://cj2wssr143vb3" path="res://quadrado.tscn" id="3_itq0x"]
[ext_resource type="PackedScene" uid="uid://qmlhksdshvyr" path="res://triangulo.tscn" id="4_knmk7"]
[ext_resource type="PackedScene" uid="uid://crtvucydbdpqj" path="res://estrela.tscn" id="5_igjwm"]
[ext_resource type="Texture2D" uid="uid://cx14mg48hk1eg" path="res://assets/main/backGround.png" id="6_cxogb"]
[ext_resource type="FontFile" uid="uid://bu5633he0jbes" path="res://assets/LilitaOne-Regular.ttf" id="7_t61vb"]
[ext_resource type="Texture2D" uid="uid://dqww50vpj5wul" path="res://assets/main/GAME4-TCC.png" id="8_282bc"]
[ext_resource type="Texture2D" uid="uid://dgjdo1xmytn5o" path="res://assets/main/3_vidas.png" id="9_1kskf"]
[ext_resource type="Texture2D" uid="uid://c7qlkgb4lbkya" path="res://assets/main/WIDGET.png" id="9_7gqna"]
[ext_resource type="Texture2D" uid="uid://dhb5pdqerpynb" path="res://assets/main/but.png" id="10_f7bgm"]
[ext_resource type="Script" path="res://button.gd" id="11_ps7ut"]
[ext_resource type="Texture2D" uid="uid://4ktuq4b45shl" path="res://assets/main/estrela.png" id="13_d88by"]
[ext_resource type="Texture2D" uid="uid://cddb8luw5jwnp" path="res://assets/main/triangulo.png" id="14_yck4b"]
[ext_resource type="Texture2D" uid="uid://cpiuwra2vo2hi" path="res://assets/main/bola.png" id="15_wxodg"]
[ext_resource type="Texture2D" uid="uid://q5psn4r8k2t2" path="res://assets/main/quadrado.png" id="16_ulorx"]
[ext_resource type="Texture2D" uid="uid://l1jn6w7nhehn" path="res://assets/main/0_vidas.png" id="17_exkdr"]
[ext_resource type="Texture2D" uid="uid://uqbo6tx5k100" path="res://assets/main/1_vida.png" id="18_dd83j"]
[ext_resource type="Texture2D" uid="uid://chcd5c8g8bgal" path="res://assets/main/2_vidas.png" id="19_kbpf4"]
[ext_resource type="Texture2D" uid="uid://deaxuf185ky6c" path="res://assets/main/pause.png" id="20_q722l"]
[ext_resource type="AudioStream" uid="uid://ciqhngbv100iy" path="res://assets/sounds/MA_RocaMusic_CandyMiners_Loop.ogg" id="21_qmhl8"]
[ext_resource type="Texture2D" uid="uid://c83oxh7rv8o28" path="res://assets/pause/w_pause.png" id="23_1v6ug"]
[ext_resource type="AudioStream" uid="uid://mrphqt25xpp6" path="res://assets/sounds/Video Game Jump Sound Effect 1.wav" id="24_24wmm"]
[ext_resource type="Texture2D" uid="uid://djr388ljgcc25" path="res://assets/pause/reset_pause.png" id="24_pcr4k"]
[ext_resource type="Texture2D" uid="uid://xi38aj4q466w" path="res://assets/pause/play_pause.png" id="25_tb7yd"]
[ext_resource type="Texture2D" uid="uid://dwbt8i5w1yagc" path="res://assets/pause/x_pause.png" id="26_r5h44"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_j81sk")
quadrado_scene = ExtResource("3_itq0x")
circulo_scene = ExtResource("2_lxu00")
triangulo_scene = ExtResource("4_knmk7")
estrela_scene = ExtResource("5_igjwm")
metadata/_edit_vertical_guides_ = [960.0, 222.0]
metadata/_edit_horizontal_guides_ = [540.0, 96.0]

[node name="backGround" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("6_cxogb")

[node name="TimerGeral" type="Timer" parent="."]

[node name="TimerEscolhido" type="Timer" parent="."]

[node name="q_escolhidos" type="Label" parent="."]
z_index = 3
offset_left = 1653.0
offset_top = 28.0
offset_right = 1734.0
offset_bottom = 173.0
theme_override_colors/font_color = Color(0.329412, 0.513726, 0.972549, 1)
theme_override_colors/font_shadow_color = Color(0.015611, 0.0861968, 0.28976, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("7_t61vb")
theme_override_font_sizes/font_size = 126
text = "0"

[node name="circulo" parent="." instance=ExtResource("2_lxu00")]
visible = false

[node name="estrela" parent="." instance=ExtResource("5_igjwm")]
visible = false

[node name="quadrado" parent="." instance=ExtResource("3_itq0x")]
visible = false

[node name="triangulo" parent="." instance=ExtResource("4_knmk7")]
visible = false

[node name="Control" type="Control" parent="."]
visible = false
z_index = 11
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="backGroundEscuro" type="Sprite2D" parent="Control"]
visible = false
position = Vector2(960, 540)
texture = ExtResource("8_282bc")

[node name="vidas" type="Sprite2D" parent="Control"]
visible = false
modulate = Color(0.54, 0.54, 0.54, 0.482353)
self_modulate = Color(1, 1, 1, 0.592157)
position = Vector2(222, 96)
texture = ExtResource("9_1kskf")

[node name="widget" type="Sprite2D" parent="Control"]
z_index = 9
position = Vector2(961, 540)
texture = ExtResource("9_7gqna")

[node name="Button" type="Button" parent="Control"]
process_mode = 3
z_index = 4
layout_mode = 0
offset_left = 833.0
offset_top = 722.0
offset_right = 1092.0
offset_bottom = 861.0
icon = ExtResource("10_f7bgm")
flat = true
script = ExtResource("11_ps7ut")

[node name="estrela_w" type="Sprite2D" parent="Control"]
visible = false
z_index = 10
position = Vector2(960, 572)
texture = ExtResource("13_d88by")

[node name="triangulo_w" type="Sprite2D" parent="Control"]
visible = false
z_index = 10
position = Vector2(961, 586)
texture = ExtResource("14_yck4b")

[node name="circulo_w" type="Sprite2D" parent="Control"]
visible = false
z_index = 10
position = Vector2(959, 577)
texture = ExtResource("15_wxodg")

[node name="quadrado_w" type="Sprite2D" parent="Control"]
visible = false
z_index = 10
position = Vector2(970, 578)
texture = ExtResource("16_ulorx")

[node name="circulo_i" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(1810, 107)
scale = Vector2(0.445, 0.445)
texture = ExtResource("15_wxodg")

[node name="quadrado_i" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(1810, 107)
scale = Vector2(0.445, 0.445)
texture = ExtResource("16_ulorx")

[node name="triangulo_i" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(1810, 107)
scale = Vector2(0.445, 0.445)
texture = ExtResource("14_yck4b")

[node name="estrela_i" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(1810, 107)
scale = Vector2(0.445, 0.445)
texture = ExtResource("13_d88by")

[node name="zero_vidas" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(222, 96)
texture = ExtResource("17_exkdr")

[node name="uma_vidas" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(216, 92)
texture = ExtResource("18_dd83j")

[node name="duas_vidas" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(216, 92)
texture = ExtResource("19_kbpf4")

[node name="tres_vidas" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(220, 92)
texture = ExtResource("9_1kskf")

[node name="pause_but" type="Button" parent="."]
z_index = 3
offset_left = 915.0
offset_top = 27.0
offset_right = 1005.0
offset_bottom = 117.0
focus_mode = 0
icon = ExtResource("20_q722l")
flat = true

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_qmhl8")
autoplay = true
parameters/looping = false

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_24wmm")

[node name="pause" type="Control" parent="."]
visible = false
z_index = 15
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D" type="Sprite2D" parent="pause"]
position = Vector2(960, 540)
texture = ExtResource("23_1v6ug")

[node name="reset_pause" type="Button" parent="pause"]
process_mode = 3
offset_left = 865.0
offset_top = 539.0
offset_right = 1054.0
offset_bottom = 729.0
focus_mode = 0
icon = ExtResource("24_pcr4k")
flat = true

[node name="play_pause" type="Button" parent="pause"]
process_mode = 3
offset_left = 1082.0
offset_top = 541.0
offset_right = 1276.0
offset_bottom = 735.0
focus_mode = 0
icon = ExtResource("25_tb7yd")
flat = true

[node name="sair_pause" type="Button" parent="pause"]
process_mode = 3
layout_mode = 0
offset_left = 647.0
offset_top = 504.0
offset_right = 841.0
offset_bottom = 739.0
focus_mode = 0
icon = ExtResource("26_r5h44")
flat = true

[connection signal="timeout" from="TimerGeral" to="." method="_on_timer_geral_timeout"]
[connection signal="timeout" from="TimerEscolhido" to="." method="_on_timer_escolhido_timeout"]
[connection signal="button_down" from="Control/Button" to="." method="_on_button_button_down"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="pause_but" to="." method="_on_pause_but_pressed"]
[connection signal="pressed" from="pause/reset_pause" to="." method="_on_reset_pause_pressed"]
[connection signal="pressed" from="pause/play_pause" to="." method="_on_play_pause_pressed"]
[connection signal="pressed" from="pause/sair_pause" to="." method="_on_sair_pause_pressed"]
